# asio-http-wrapper

./: .gitignore  .gitlab-ci.yml  .gitmodules  README.md  pippo.http
_garage/asio1/: .gitignore  1.cpp  2.cpp  3.cpp  CMakeLists.txt  asio1.cbp  asio1.cscope_file_list  asio1.depend  asio1.layout  gmon.out  main.cpp
_garage/asio1/include/: async_mocks.hxx  socket_pipe.hxx  stream_pipe.hxx
_garage/sample3/: .cproject
_garage/sample3/Debug/: makefile
_garage/sample3/Debug/src/: subdir.mk
_garage/sample3/include/: async_mocks.hxx  socket_pipe.hxx
_garage/sample3/src/: 3.cpp  Makefile.in  a.out
_garage/sample3/src/.deps/: sample2.Po
_garage/test1/: .gitignore  CMakeLists.txt  test  test1.cpp  test2.cpp  test3.cpp
_garage/test1/include/: http_parser.hxx
_garage/test1/include/detail/: http_parser_impl.hxx
experiments/asio1/: asio1.layout
experiments/asio1/include/: async_mocks.hxx  ring_buffer.hxx
experiments/asio1/src/: async_mocks.hxx.cpp
experiments/sample3/: .project
experiments/sample3/Debug/src/: 3.d
experiments/sample3/include/: ring_buffer.hxx  socket_pipe.hxx
experiments/sample3/src/: Makefile  Makefile.am
include/: http_inbound_connection.hxx  http_parser.hxx  http_server.hxx  pimpl.h  ring_buffer.hxx  stream_pipe.hxx
include/detail/: http_inbound_connection_impl.hxx  http_parser_impl.hxx  pimpl.hxx
include/util/: pimpl.h  stream_pipe.hxx
include/util/detail/: pimpl.hxx
include/wrapper/: http_parser.hxx
include/wrapper/detail/: http_parser_impl.hxx
samples/: .gitignore  CMakeCache.txt  CMakeLists.txt  buffpipe1.cpp  fileserver.cpp  http_parser_test.cpp  ring_buffer_test.cpp  stream_pipe_test  stream_pipe_test.cpp
tests/: .gitignore  CMakeLists.txt  buffpipe1.cpp  http_inbound_connection_test.cpp  http_parser_test.cpp  ring_buffer_test.cpp  runtests.sh  socketmock.hxx  stream_pipe_test  stream_pipe_test.cpp  test.cpp  test.h  test.hxx
